--- a/app/assets/stylesheets/sass/2-modules/_banner.sass
+++ b/app/assets/stylesheets/sass/2-modules/_banner.sass
@@ -146,7 +146,8 @@
   background: url(../images/hero/hero_ourteam.jpg) center center
   +banner-image
 
-
+.img-wrapper
+  width: 100%
 
 // .redsweater
 //   background: url(../images/boyClassroom.jpg) center top
