--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -89,7 +89,7 @@
           Create a unique relationship while changing a child's life.
         </p>
         <div class="btns-wrapper">
-          <%= link_to 'LEARN ABOUT SPONSORSHIPS', students_path, :class => "btn btn-solid" %>
+          <%= link_to 'LEARN ABOUT SPONSORSHIPS', students_path, :class => "btn btn-solid mt-4" %>
         </div>
       </div>
     </div>
