--- a/app/views/pages/ourfocus.html.erb
+++ b/app/views/pages/ourfocus.html.erb
@@ -23,11 +23,11 @@
       <h2>2. GENDER EQUALITY</h2>
       <p>Boys respect girls when they compete with them on a level playing field and see them win. Whether it’s in math or on the soccer pitch, educating girls alongside boys can shift the thinking of an entire community. We see this come to life every day at the Mungere School. Girls who first walked in the door with heads hung low and eyes glued to the floor, blossom into confident, smart young women who know they are intelligent and capable leaders. The young men who learn and grow alongside them cannot help but be changed.</p>
       <hr>
-      <strong><h5>TASIANA: A LEADER ON AND OFF THE PITCH</h5></strong>
+      <h5>TASIANA: A LEADER ON AND OFF THE PITCH</h5>
       <p>
         Read one teacher's account of student Tasiana's journey to becoming captain of the boys soccer team and the impact she is having on her teammates.
       </p>
-      <div class="btns-wrapper">
+      <div class="btns-wrapper mt-4">
         <a href="#" class="btn btn-big btn-solid"><span>READ TASIANA'S STORY</span></a>
       </div>
     </div>
@@ -92,7 +92,7 @@
         <h2>KEEP UP WITH US</h2>
         <p class="lead">Check out our blog to keep track of what's happening at Mungere and beyond.</p>
         <div class="btns-wrapper">
-          <%= link_to 'EXPLORE THE BLOG', posts_path, :class => "btn btn-solid"%>
+          <%= link_to 'EXPLORE THE BLOG', posts_path, :class => "btn btn-solid mt-4"%>
         </div>
       </div>
     </div>
