--- a/app/views/pages/ourstory.html.erb
+++ b/app/views/pages/ourstory.html.erb
@@ -6,46 +6,45 @@
   </div>
 </div>
 <div class="flex page-canvas">
-  <div class="row">
-    <div class="col-sm-10 col-sm-offset-1">
+  <div class="flex-item-1col">
+    <div class="col-sm-10 offset-sm-1">
       <h3>IT ALWAYS SEEMS IMPOSSIBLE UNTIL IT’S DONE</h3>
 
       <p class="lead">In 2005, when Ashley Holmer committed to teaching and coaching soccer for a year in a rural village in Tanzania, she had no idea it would be a life-altering move.</p>
-      <p class="">Over the course of the year, she lived and worked among the Maasai people. Living with no running water or electricity, she learned local customs, attended tribal rite of passage celebrations and ceremonies and became fluent in Swahili.</p>
-      <br/>
-      <div class="col-sm-5 offset-sm-3" style="padding-left:0">
+      <p class="my-3">Over the course of the year, she lived and worked among the Maasai people. Living with no running water or electricity, she learned local customs, attended tribal rite of passage celebrations and ceremonies and became fluent in Swahili.</p>
+
+      <div class="col-sm-8 offset-sm-2">
+        <hr>
         <h2 style="line-height: 1.2"> “Why do I do this work? Because if you can, why wouldn’t you?”</h2>
+        <hr>
       </div>
-      <p class="">She also saw the inequality between boys and girls, specifically in education. When 82% of Tanzanian families can’t afford school fees, sending girls to school isn’t a priority, it’s a burden. And many government schools aren’t a safe space for girls. A basic middle and high school education that’s a reality in many parts of the world, is still far from a dream here.</p>
-      <br/>
-      <p class="">As a U.S. college all-star soccer player, Ashley quickly earned the respect of the males in the village on the pitch. Coaching and playing alongside boys where girls aren’t often allowed, she demonstrated how women could not only participate, but also compete.</p>
-      <br/>
-      <p class="">Her leadership as a teacher and an athlete earned the respect of local leaders as well. By the end of 2005, she was asked to start a school in a nearby community. Coming from a family of educators, she understood the exponential benefits of a good education. She said yes.</p>
-      <br/>
-      <p><strong>WORKING TOWARD A LEVEL PLAYING FIELD </strong></p>
-      <br/>
-      <p class="">The reality of a level playing field for girls in Tanzania and other East African countries was aspirational at best. But Ashley took on the community’s ask, raising funds for building and opening Orkeeswa, the first secondary school in Lashaine Village, in 2008.</p>
-      <br/>
-      <p class="">And she knew one school wasn’t going to be enough. </p>
-      <br/>
-      <p class="">There’s an entire generation of girls and boys being left behind in Tanzania. Providing middle and high school education and support to girls, especially those between the ages of 11 and 17, improves individual lives and families&mdash;and it has more impact in changing the next generation for the better than any other cause.</p>
-      <br/>
-      <p class="">That’s why Ashley founded the Red Sweater Project in 2011, with the goal of putting as many students as possible into a school uniform, including their beloved red sweaters. In 2012, Red Sweater Project opened the Mungere School, which welcomes a new class of students each year. The organization is dedicated to developing quality, sustainable and accessible schools for East African children. And we’re just getting started.
+      <p class="my-3">She also saw the inequality between boys and girls, specifically in education. When 82% of Tanzanian families can’t afford school fees, sending girls to school isn’t a priority, it’s a burden. And many government schools aren’t a safe space for girls. A basic middle and high school education that’s a reality in many parts of the world, is still far from a dream here.</p>
+
+      <p class="my-3">As a U.S. college all-star soccer player, Ashley quickly earned the respect of the males in the village on the pitch. Coaching and playing alongside boys where girls aren’t often allowed, she demonstrated how women could not only participate, but also compete.</p>
+
+      <p class="my-3">Her leadership as a teacher and an athlete earned the respect of local leaders as well. By the end of 2005, she was asked to start a school in a nearby community. Coming from a family of educators, she understood the exponential benefits of a good education. She said yes.</p>
+
+      <h3>WORKING TOWARD A LEVEL PLAYING FIELD </h3>
+      <p class="my-3">The reality of a level playing field for girls in Tanzania and other East African countries was aspirational at best. But Ashley took on the community’s ask, raising funds for building and opening Orkeeswa, the first secondary school in Lashaine Village, in 2008.</p>
+
+      <p class="my-3">And she knew one school wasn’t going to be enough. </p>
+
+      <p class="my-3">There’s an entire generation of girls and boys being left behind in Tanzania. Providing middle and high school education and support to girls, especially those between the ages of 11 and 17, improves individual lives and families&mdash;and it has more impact in changing the next generation for the better than any other cause.</p>
+
+      <p class="mt-3 mb-4">That’s why Ashley founded the Red Sweater Project in 2011, with the goal of putting as many students as possible into a school uniform, including their beloved red sweaters. In 2012, Red Sweater Project opened the Mungere School, which welcomes a new class of students each year. The organization is dedicated to developing quality, sustainable and accessible schools for East African children. And we’re just getting started.
       </p>
-      <br/>
-      <br/>
     </div>
   </div>
 </div>
 
-<div class="yellow">
+<div class="yellow mb-4">
   <div class="flex page-canvas nowrap">
     <div class="flex-item-2col">
       <div class="twocol-left-text">
         <h2>JOIN US</h2>
         <p class="lead">Help us put kids into red sweaters and in the classroom. Every dollar makes a difference.</p>
         <div class="btns-wrapper">
-          <%= link_to 'DONATE', new_charge_path, :class => "btn btn-solid" %>
+          <%= link_to 'DONATE', new_charge_path, :class => "btn btn-solid mt-4" %>
           <!-- <a href="/pages/ourfocus" class="btn btn-solid">DONATE</a> -->
         </div>
       </div>
@@ -62,185 +61,174 @@
   </div>
 </div>
 
-<!-- <div class="yellow"> -->
-  <!-- <div class="flex page-canvas">
-    <div class="col-sm-5 yellow">
-      <h2>JOIN US IN GIVING A RED SWEATER EDUCATION NOW</h2>
-      <div class="btns-wrapper">
-        <%= link_to 'Donate', new_charge_path, :class=> "btn btn-primary"%>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <img src="../images/ourstory_donate.jpg" alt="Students share a desk in class at the Mungere School" style="width: 100%;">
-    </div>
-  </div> -->
-<!-- </div> -->
-<hr>
-<div class="flex page-canvas timeline">
-  <div class="flex-item-1col">
-
+<div class="flex page-canvas">
+  <div class="flex-item-1col mt-4">
     <div class="row">
-      <h1>OUR TIMELINE</h1>
-      <div class="col-sm-4">
-        <h3>February <br/>2017</h3>
-      </div>
-      <div class="col-sm-8">
-        <p class="lead">Form IV National Examination results return with 100% of Mungere students passing, compared to only 27% of students nationally.
-        </p>
-        </p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>January <br/>2017</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <div class="col-sm-12">
+          <h1>OUR TIMELINE</h1>
+        </div>
+        <div class="col-sm-4">
+          <h3>February, 2017</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">Form IV National Examination results return with 100% of Mungere students passing, compared to only 27% of students nationally.
+          </p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">Following student selection from a field of over 130 applicants, the fifth class of students begins at Mungere.
-        </p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>December <br/>2016</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-4">
+          <h3>January, 2017</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">Following student selection from a field of over 130 applicants, the fifth class of students begins at Mungere.
+          </p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">Mungere’s first Form IV class graduates from Ordinary Level Secondary School.
-        </p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>May <br/>2016</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-4">
+          <h3>December, 2016</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">Mungere’s first Form IV class graduates from Ordinary Level Secondary School.
+          </p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">The fourth class of students joins Mungere, bringing the student body, comprised of Forms I through IV, to 105 by mid-2016.
-        </p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>March <br/>2016</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-4">
+          <h3>May, 2016</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">The fourth class of students joins Mungere, bringing the student body, comprised of Forms I through IV, to 105 by mid-2016.
+          </p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">A new teacher office is constructed to accommodate the increase in the student and staff population.
-        </p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>April <br/>2015</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-4">
+          <h3>March, 2016</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">A new teacher office is constructed to accommodate the increase in the student and staff population.
+          </p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">A new two-classroom building is constructed on the Mungere campus and the third class of students starts at Mungere.
-        </p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>November <br/>2014</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-4">
+          <h3>April, 2015</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">A new two-classroom building is constructed on the Mungere campus and the third class of students starts at Mungere.
+          </p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">Mungere students sit for their first Form II National Examination and score 3rd highest in the Monduli School District.
-        </p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>September <br/>2013</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-4">
+          <h3>November, 2014</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">Mungere students sit for their first Form II National Examination and score 3rd highest in the Monduli School District.
+          </p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">Mungere’s second class of students is selected to join the school.
-        </p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>January <br/>2013</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-4">
+          <h3>September, 2013</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">Mungere’s second class of students is selected to join the school.
+          </p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">The Mungere school year officially begins with Form I classes being taught by a team from Tanzania, the United States and Mexico.
-        </p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>September <br/>2012</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-4">
+          <h3>January, 2013</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">The Mungere school year officially begins with Form I classes being taught by a team from Tanzania, the United States and Mexico.
+          </p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">Beginning with an English immersion program, the Mungere Secondary School opens with its first class of 40 students, three international ESL teachers from Ireland and Australia and health workers from the United States. While Tanzanian primary school is taught in Swahili, secondary school is taught strictly in English. The immersion program prepares new students for their time on the school’s completely English-speaking campus.
-        </p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>March <br/>2012</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-4">
+          <h3>September, 2012</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">Beginning with an English immersion program, the Mungere Secondary School opens with its first class of 40 students, three international ESL teachers from Ireland and Australia and health workers from the United States. While Tanzanian primary school is taught in Swahili, secondary school is taught strictly in English. The immersion program prepares new students for their time on the school’s completely English-speaking campus.
+          </p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">Over 200 students apply to be part of the first class at Mungere and forty students are selected.</p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>January <br/>2012</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-4">
+          <h3>March, 2012</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">Over 200 students apply to be part of the first class at Mungere and forty students are selected.</p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">Construction begins on the first two classrooms and offices at Mungere.</p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>June-December <br/>2011</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-4">
+          <h3>January, 2012</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">Construction begins on the first two classrooms and offices at Mungere.</p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">The organization is founded and successfully fundraises for the initial construction of the school. </p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>April&mdash;June <br/>2011</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-5">
+          <h3>June-December, 2011</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">The organization is founded and successfully fundraises for the initial construction of the school. </p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">The organization begins research on a project site where they can work in conjunction with a community in need of a secondary school. Six possible sites are considered in viable areas where elementary schools exist, but no affordable educational opportunities are available beyond the 6th Grade (U.S. equivalent).
-        </p>
-        <p class="lead">In June, an official agreement is signed between the government, Losirwa and Mungere community members and Red Sweater Project to build the area’s first middle and high school, serving over 5,000 community members. The village donates 15 acres of land on which to build the Mungere Secondary School, stewarding the school’s success by participating in construction and operations.
-        </p>
-      </div>
-    </div>
 
-    <div class="row">
-      <hr class="hr-grey">
-      <div class="col-sm-4">
-        <h3>January <br/>2011</h3>
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-4">
+          <h3>April&mdash;June, 2011</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">The organization begins research on a project site where they can work in conjunction with a community in need of a secondary school. Six possible sites are considered in viable areas where elementary schools exist, but no affordable educational opportunities are available beyond the 6th Grade (U.S. equivalent).
+          </p>
+          <p class="lead">In June, an official agreement is signed between the government, Losirwa and Mungere community members and Red Sweater Project to build the area’s first middle and high school, serving over 5,000 community members. The village donates 15 acres of land on which to build the Mungere Secondary School, stewarding the school’s success by participating in construction and operations.
+          </p>
+        </div>
       </div>
-      <div class="col-sm-8">
-        <p class="lead">Ashley Holmer and fellow passionate volunteers form the Red Sweater Project in response to a lack of high school educational opportunities for children in rural Tanzania.
-        </p>
+
+      <div class="col-sm-10 offset-sm-1">
+        <hr class="hr-grey">
+        <div class="col-sm-4">
+          <h3>January, 2011</h3>
+        </div>
+        <div class="col-sm-10">
+          <p class="lead">Ashley Holmer and fellow passionate volunteers form the Red Sweater Project in response to a lack of high school educational opportunities for children in rural Tanzania.
+          </p>
+        </div>
       </div>
     </div>
   </div>
