--- a/app/views/pages/theteam.html.erb
+++ b/app/views/pages/theteam.html.erb
@@ -25,7 +25,7 @@
           <%= image_tag("staff/ashley.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Ashley Holmer </h5>
+              <h3 class="no-top-pad mt-1 mt-1">Ashley Holmer </h3>
               <p><em>
                 Founder and Executive Director
               </em></p>
@@ -44,7 +44,7 @@
           <%= image_tag("staff/ada.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Ada Banasik </h5>
+              <h3 class="no-top-pad mt-1">Ada Banasik </h3>
               <p><em>
                 Programs Director, Volunteer
               </em></p>
@@ -62,7 +62,7 @@
           <%= image_tag("staff/lindsay.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Lindsay Pour, MSc</h5>
+              <h3 class="no-top-pad mt-1">Lindsay Pour, MSc</h3>
               <p><em>
                 Entrepreneurship &amp; Sustainability Coordinator, Volunteer
               </em></p>
@@ -80,7 +80,7 @@
           <%= image_tag("staff/julia.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Julia Dickey</h5>
+              <h3 class="no-top-pad mt-1">Julia Dickey</h3>
               <p><em>
                 Creative Director, Volunteer
               </em></p>
@@ -97,7 +97,7 @@
           <%= image_tag("staff/kelsey_f.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Kelsey Friedman</h5>
+              <h3 class="no-top-pad mt-1">Kelsey Friedman</h3>
               <p><em>
                 Communications and Media Manager
               </em></p>
@@ -120,7 +120,7 @@
           <%= image_tag("staff/faye.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Faye Pitcher</h5>
+              <h3 class="no-top-pad mt-1">Faye Pitcher</h3>
               <p><em>
               Office and Accounts Manager
               </em></p>
@@ -144,7 +144,7 @@
           <%= image_tag("staff/tim.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Tim Sexton</h5>
+              <h3 class="no-top-pad mt-1">Tim Sexton</h3>
               <p><em>
                 IT Director, Volunteer
               </em></p>
@@ -177,7 +177,7 @@
           <%= image_tag("staff/ada.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Ada Banasik </h5>
+              <h3 class="no-top-pad mt-1">Ada Banasik </h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -199,7 +199,7 @@
           <%= image_tag("staff/ada.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Sarah Ford, MPH </h5>
+              <h3 class="no-top-pad mt-1">Sarah Ford, MPH </h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -220,7 +220,7 @@
           <%= image_tag("staff/alan.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Ambassador Alan Holmer, JD </h5>
+              <h3 class="no-top-pad mt-1">Ambassador Alan Holmer, JD </h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -247,7 +247,7 @@
           <%= image_tag("staff/erika.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Erika Bryant, MEd</h5>
+              <h3 class="no-top-pad mt-1">Erika Bryant, MEd</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -271,7 +271,7 @@
           <%= image_tag("staff/john_n.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">John Nicholson, MBA</h5>
+              <h3 class="no-top-pad mt-1">John Nicholson, MBA</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -310,7 +310,7 @@
           <%= image_tag("staff/jenny.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Jenny Barker, MPA</h5>
+              <h3 class="no-top-pad mt-1">Jenny Barker, MPA</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -338,7 +338,7 @@
           <%= image_tag("staff/dede.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Dede McClure</h5>
+              <h3 class="no-top-pad mt-1">Dede McClure</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -365,7 +365,7 @@
           <%= image_tag("staff/christine.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Christine Bwayo-McCulloch, MBA</h5>
+              <h3 class="no-top-pad mt-1">Christine Bwayo-McCulloch, MBA</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -390,7 +390,7 @@
           <%= image_tag("staff/gary.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Gary R. Edson, JD, MBA</h5>
+              <h3 class="no-top-pad mt-1">Gary R. Edson, JD, MBA</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -414,7 +414,7 @@
           <%= image_tag("staff/mark.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Ambassador Mark Green, JD</h5>
+              <h3 class="no-top-pad mt-1">Ambassador Mark Green, JD</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -444,7 +444,7 @@
           <%= image_tag("staff/haley.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Haley Holmer, MPH</h5>
+              <h3 class="no-top-pad mt-1">Haley Holmer, MPH</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -466,7 +466,7 @@
           <%= image_tag("staff/michele.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Michele Houck</h5>
+              <h3 class="no-top-pad mt-1">Michele Houck</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -490,7 +490,7 @@
           <%= image_tag("staff/tony.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Tony Machacha, MSc, MBA</h5>
+              <h3 class="no-top-pad mt-1">Tony Machacha, MSc, MBA</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -519,7 +519,7 @@
           <%= image_tag("staff/kimberly.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Kimberly Reardon</h5>
+              <h3 class="no-top-pad mt-1">Kimberly Reardon</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -544,7 +544,7 @@
           <%= image_tag("staff/frank.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Frank So</h5>
+              <h3 class="no-top-pad mt-1">Frank So</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -568,7 +568,7 @@
           <%= image_tag("staff/james.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Ambassador James A. Stewart</h5>
+              <h3 class="no-top-pad mt-1">Ambassador James A. Stewart</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
@@ -599,7 +599,7 @@
           <%= image_tag("staff/vanessa.jpg", :class => "staff-photo")%>
           <div class="title">
             <div class="name">
-              <h5 class="no-top-pad">Vanessa Tharp, MAT</h5>
+              <h3 class="no-top-pad mt-1">Vanessa Tharp, MAT</h3>
               <p><em>
                 Qualifying Skills/Expertise
               </em></p>
