--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -34,7 +34,7 @@
         <h2>BE A DONOR</h2>
         <p class="lead">Help us put kids into red sweaters and in the classroom. Every dollar makes a difference.</p>
         <div class="btns-wrapper">
-          <%= link_to 'DONATE', new_charge_path, :class => "btn btn-solid" %>
+          <%= link_to 'DONATE', new_charge_path, :class => "btn btn-solid mt-4" %>
           <!-- <a href="/pages/ourfocus" class="btn btn-solid">DONATE</a> -->
         </div>
       </div>
