--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -8,34 +8,31 @@
 
 <div class="flex page-canvas ">
   <div class="flex-item-1col">
-    <div class="row">
-      <div class="col-sm-6">
-        <p class="lead">The Mungere School is the first middle and high school available to kids in the rural community of Mungere, Tanzania. Every year more than 200 families apply for one of the 30-40 available spots in the incoming class.
+    <div class="row mb-4 mx-1">
+      <p class="">The Mungere School is the first middle and high school available to kids in the rural community of Mungere, Tanzania. Every year more than 200 families apply for one of the 30-40 available spots in the incoming class.
         When completed, The Mungere Campus will serve over 300 students each year, with students in grades 6-12.
-        </p>
-        <br/>
-        <p><strong>THE AVERAGE SCHOOL LACKS THE INFRASTRUCTURE TO EFFECTIVELY EDUCATE STUDENTS</strong></p>
+      </p>
+    </div>
+    <div class="row">
+      <div class="col-sm-6 mx-1">
+        <h5>THE AVERAGE SCHOOL LACKS THE INFRASTRUCTURE TO EFFECTIVELY EDUCATE STUDENTS</h5>
         <p>In Tanzania, secondary schools have incredibly high student-to-teacher ratios, teachers must utilize outdated books and learning materials, and facilities are limited. All formal exams in Tanzania are given in English, but many private secondary schools still teach in Swahili, due to teacher shortages and lack of proficiency.</p>
         <br/>
-        <p><strong>STILL THE AVERAGE FAMILY CAN'T AFFORD TO SEND THEIR KIDS TO SCHOOL</strong></p>
+        <h5>STILL THE AVERAGE FAMILY CAN'T AFFORD TO SEND THEIR KIDS TO SCHOOL</h5>
         <p>
-        While elementary school in Tanzania is free, middle and high school costs about USD $500 per year, making it highly cost prohibitive when the average family income is roughly USD $530 per year. </p>
+        While elementary school in Tanzania is free, middle and high school costs about USD $500 per year, making it highly cost prohibitive when the average family income is roughly USD $530 per year. Even when families make great sacrifices to send a child to school, there is no guarantee of the quality of education. For students living in rural areas, attending middle or high school usually means traveling great distances daily, which can be both dangerous and exhausting. </p>
         <br/>
         <br/>
       </div>
-      <div class="col-sm-6">
-       <p>Even when families make great sacrifices to send a child to school, there is no guarantee of the quality of education. For students living in rural areas, attending middle or high school usually means traveling great distances daily, which can be both dangerous and exhausting.
-        </p>
-        <br/>
-        <p><strong>AFFORDABLE AND ACCESSIBLE</strong></p>
+      <div class="col-sm-5 mt-1 mx-1">
+        <h5>AFFORDABLE AND ACCESSIBLE</h5>
         <p>Families invest only USD $15 per year total to cover their child's entire education. While their financial contribution doesn't cover all expenses, it pays for operating costs at the school, solidifying each family's commitment. The school is centrally located within the village, protecting students from the vulnerability of travel and giving them much-needed time to study.</p>
         <br/>
 
-        <p><strong>SOMETIMES IT REALLY DOES TAKE A VILLAGE</strong></p>
+        <h5>SOMETIMES IT REALLY DOES TAKE A VILLAGE</h5>
         <p>The Parent Action Committee as well as the local tribal government are actively involved with the school. Community meetings are held regularly to share ideas and solve problems in a cohesive partnership.</p>
         </div>
       </div>
-
     </div>
   </div>
 </div>
@@ -44,37 +41,34 @@
 <!-- <div class="blue"> -->
   <div class="flex page-canvas">
     <div class="flex-item-1col">
-      <div class="row">
-        <h2>PREPARED FOR SUCCESS</h2>
-        <p class="lead">Preparation is the key to success. Our students work hard for:</p>
+      <div class="row mb-4">
+        <div class="col-sm-12">
+          <h2>PREPARED FOR SUCCESS</h2>
+          <p class="">Preparation is the key to success. Our students work hard for:</p>
+        </div>
       </div>
       <div class="row">
-        <div class="col-sm-6">
-          <ul><p><strong><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;
-            A COMPETITIVE, HIGH QUALITY EDUCATION</strong></p>
+        <div class="col">
+          <ul><h5><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;
+            A COMPETITIVE, HIGH QUALITY EDUCATION</h5>
             <li>• Our teachers hold advanced degrees and lend local and cultural perspectives. Our teachers have come from from China, Ireland, the United States, Tanzania, Scotland, England, Mexico and Australia to donate their time and talents. All teachers have completed an ESL, CELTA or TESOL training. </li>
             <li>• Mungere students consistently score in the top quarter of schools in the region and in the top 3 in the district (out of 23 schools) on government-issued tests.</li>
             <li>• The Tanzania Ministry of Education has recognized Red Sweater Project as a successful school model that gets positive results.
             </li>
-            <br/>
-            <p><strong><i class="fa fa-handshake-o" aria-hidden="true"></i>&nbsp;
-              AN ATMOSPHERE THAT PROMOTES GENDER EQUALITY</strong></p>
+            <h5><i class="fa fa-handshake-o" aria-hidden="true"></i>&nbsp;
+              AN ATMOSPHERE THAT PROMOTES GENDER EQUALITY</h5>
             <li>• We level the playing field for boys and girls, whether it's in the classroom, on an athletic field or on a debate stage. This approach builds the confidence of female students and teaches all students that everyone has strengths that are not defined or limited by gender. </li>
           </ul>
-          <br/>
-          <p><strong><i class="fa fa-building" aria-hidden="true"></i>&nbsp;
-            SUSTAINABLY DESIGNED, MODERN FACILITIES</strong></p>
+        </div>
+        <div class="col">
+          <h5><i class="fa fa-building" aria-hidden="true"></i>&nbsp;
+            SUSTAINABLY DESIGNED, MODERN FACILITIES</h5>
           <ul>
             <li>• Solar power throughout campus has been made possible by the volunteer efforts of Engineers without Borders.</li>
-          </ul>
-        </div>
-        <div class="col-sm-6">
-          <ul>
             <li>• By giving students their own solar-powered lights for late night studying, families save time, money and resources. It is also a healthier alternative to the traditionally-used kerosene lantern.</li>
             <li>• Our buildings are designed to keep students and faculty cool in the heat and warm when it's cold without the use of consumable fuels.</li>
           </ul>
-          <br/>
-          <p><strong><i class="fa fa-heartbeat text-center" aria-hidden="true"></i>&nbsp; HEALTH CARE, HEALTH EDUCATION AND SANITATION SERVICES</strong></p>
+          <h5><i class="fa fa-heartbeat text-center" aria-hidden="true"></i>&nbsp; HEALTH CARE, HEALTH EDUCATION AND SANITATION SERVICES</h5>
           <ul>
             <li>• Safe drinking water is available to all students.</li>
             <li>• Health outreach helps to boost health and prevent disease within the community.</li>
@@ -91,17 +85,17 @@
 <!-- </div> -->
 
   <div class="flex page-canvas">
-    <div class="col-sm-12">
-      <div class="row">
+    <!-- <div class="col-sm-12"> -->
+      <div class="row my-4">
         <h2>HANDS-ON LEARNING</h2>
         <p class="lead">
           In addition to their studies in the classroom, students at the Mungere School have the opportunity to participate in our hands-on programs.
         </p>
       </div>
-      <div class="row">
+      <div class="row mb-4">
         <div class="col-sm-4">
           <div class="img-wrapper">
-            <%= image_tag("focus_store.jpg", :class => "img-responsive")%>
+            <%= image_tag("focus_store.jpg", :style => "width: 100%; border-radius: 10px; border: none")%>
           </div>
           <div class="focusCopy">
             <h5><strong>SMALL BUSINESS SKILLS</strong></h5>
@@ -117,7 +111,7 @@
         </div>
         <div class="col-sm-4">
           <div class="img-wrapper">
-            <%= image_tag("school_nutrition.jpg", :class => "img-responsive")%>
+            <%= image_tag("school_nutrition.jpg", :style => "width: 100%; border-radius: 10px; border: none")%>
           </div>
           <div class="focusCopy">
             <h5><strong>NUTRITION AND AGRICULTURE</strong></h5>
@@ -131,7 +125,7 @@
         </div>
         <div class="col-sm-4">
           <div class="img-wrapper">
-            <%= image_tag("school_sports.png", :class => "img-responsive")%>
+            <%= image_tag("school_sports.png", :style => "width: 100%; border-radius: 10px; border: none")%>
           </div>
           <div class="focusCopy">
             <h5><strong>LEADERSHIP AND TEAMWORK</strong></h5>
@@ -143,13 +137,13 @@
           </div>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
 
 
-<div class="blue">
-  <div class="flex page-canvas">
-    <div class="col-sm-12 flex-item-1col">
+<div class="blue py-4">
+  <div class="flex page-canvas py-4">
+    <div class="row">
       <div class="col-sm-6">
         <h2>ABOUT TANZANIA, EAST AFRICA</h2>
         <p>
@@ -172,14 +166,14 @@
   </div>
 </div>
 
-<div class="yellow">
+<div class="yellow mb-0">
   <div class="flex page-canvas nowrap">
     <div class="flex-item-2col">
       <div class="twocol-left-text">
         <h2>OUR FOCUS</h2>
         <p class="lead">Quality education, gender equality and responsible innovation. Learn how we are making an impact in Mungere Village.</p>
         <div class="btns-wrapper">
-          <a href="/pages/ourfocus" class="btn btn-solid">LEARN ABOUT OUR FOCUS</a>
+          <a href="/pages/ourfocus" class="btn btn-solid mt-4">LEARN ABOUT OUR FOCUS</a>
         </div>
       </div>
     </div>
