--- a/app/assets/stylesheets/sass/1-base/_typography.sass
+++ b/app/assets/stylesheets/sass/1-base/_typography.sass
@@ -75,21 +75,22 @@ h4
   letter-spacing: 1px
 
 h5
-  font-size: 16px
-  line-height: 24px
-  font-weight: 600
+  font-size: 1.1em
+  line-height: 1.5em
+  font-weight: 500
   padding-top: 15px
-  line-height: 20px
+  color: $text-blue
+  letter-spacing: .5px
 
 h6
   font-size: 13px
   line-height: 13px
 
 p, li
-  font-size: 1.25em
+  font-size: 1.1em
   line-height: 1.5em
   font-family: 'proxima-nova', sans-serif
-  font-weight: 400
+  font-weight: 300
   color: $body-type-grey
 
 .white-text
@@ -126,3 +127,12 @@ ul
     color: white
     a:hover
       text-decoration: none
+
+.ltgrey
+  background-color: #f7f7f7
+  height: auto
+  letter-spacing: .5px
+  // color: white
+  padding: 0 0 60px 0
+  a
+    text-decoration: none
